--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
+    <!-- <script src="libraries/p5.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.2/lib/p5.min.js"></script>
+
     <!-- <script src="libraries/p5.sound.min.js"></script> -->
   </head>
 
